Fix spacing between section

--- a/src/_iran/position/position.scss
+++ b/src/_iran/position/position.scss
@@ -56,8 +56,16 @@
 
 @media screen and (max-width: 768px) {
   .position {
+    &-bg {
+      padding-bottom: 3rem;
+    }
+
     &-text {
       max-width: 90%;
+    }
+
+    &-title {
+      margin-top: 2rem;
     }
   }
 }
