--- a/src/_iran/timeline/timeline.scss
+++ b/src/_iran/timeline/timeline.scss
@@ -41,6 +41,7 @@
     font-weight: 800;
     max-height: 33px;
     max-width: 128px;
+    text-shadow: 3px 3px 6px $greyLightest;
   }
 
   &-line {
@@ -86,6 +87,7 @@
     font-size: 0.9rem;
     font-weight: 700;
     text-align: center;
+    text-shadow: 3px 3px 6px $greyLightest;
   }
 
   &-title {
@@ -152,6 +154,7 @@
 
     &-title {
       margin: 0 1rem 0;
+      padding-top: 2rem;
     }
   }
 
